# seamusic

./: .gitattributes  .gitignore  .gitkeep  LICENSE.md  README.md  docker-compose.yml  env_example  nginx.conf  pyproject.toml  run.sh
backend/: .cache  .dockerignore  .env  .env.example  .env.production  .gitattributes  .gitignore  Dockerfile  Dockerfile.test  Dockerfile_migrations  Makefile  alembic.ini  app.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  log_config.ini  mypy.ini  pyproject.toml  setup.cfg
backend/db/postgres/: postmaster.pid
backend/migrations/: env.py
backend/migrations/versions/: 0bfccfc69ed2_dssdf.py  1d41ae799392_create_view_table.py  22e68a9dd0a3_add_music_model.py  2744dc3a9015_.py  403e905e05fc_migrations.py  40e800f89180_sfdfds.py  41d0570c3bd7_.py  43fda0b39123_fdsfdsfds.py  48ef6322880d_fdsfdsfds.py  54873a280577_sfdfsd.py  5d36507f66e3_add_music_model.py  63517aeec8da_.py  705b6bfeafc7_sss.py  7cfba6a445f5_test.py  8645f6452298_inital_blyat.py  8f564f986191_init_music.py  95a7f2702c07_sos.py  a14f536e1fb3_fsdfsd.py  a9f846950e1b_fdsfdsfds.py  ac5f3bbae7d6_inital_blyat.py  aca5c3303ffd_inital.py  af624a0e8579_.py  b052ec01f9cb_add_music_model.py  b3c5602e1a6f_inital_blyat.py  bce07397f252_init_two.py  cf0f58d65316_test.py  d34d88ae75c3_add_music_model.py  da9030b33b03_initial_tables.py  e600fb091e3b_.py  e8c488a0d130_init_two.py  ef7e236f94c8_add_music_model.py  efa9f45a28d3_inital.py  f8e6d47c98ee_fdsfdsfds.py
backend/requirements/: base.txt  dev.txt
backend/src/: .cache  __init__.py  config.py  database.py  exceptions.py  main.py  services.py
backend/src/admin/: setup.py  views.py
backend/src/albums/: models.py  router.py  schemas.py  services.py  utils.py
backend/src/api/: app.py  middlewares.py
backend/src/auth/: dependencies.py  models.py  router.py  schemas.py  services.py  utils.py
backend/src/beatpacks/: models.py  router.py  schemas.py  services.py  utils.py
backend/src/beats/: models.py  router.py  schemas.py  services.py  utils.py
backend/src/comments/: models.py  router.py  schemas.py  services.py  utils.py
backend/src/core/: config.py  cruds.py  database.py  loggers.py  media.py
backend/src/enums/: auth.py  spotify.py  type.py
backend/src/exceptions/: api.py  services.py
backend/src/licenses/: models.py  router.py  schemas.py  services.py  utils.py
backend/src/messages/: models.py  router.py  services.py
backend/src/models/: __init__.py  albums.py  auth.py  beatpacks.py  beats.py  comments.py  licenses.py  messages.py  notifications.py  soundkits.py  squads.py  subscriptions.py  tags.py  tracks.py  views.py
backend/src/music/: models.py  router.py  schemas.py  services.py  utils.py
backend/src/notifications/: models.py  router.py  services.py  utils.py
backend/src/repositories/: __init__.py  auth.py  base.py  beatpacks.py  comments.py  soundkits.py
backend/src/schemas/: albums.py  auth.py  base.py  beatpacks.py  beats.py  comments.py  licenses.py  music.py  notifications.py  search.py  soundkits.py  spotify.py  squads.py  subscriptions.py  tags.py  tracks.py
backend/src/search/: router.py  utils.py
backend/src/services/: albums.py  auth.py  base.py  beatpacks.py  beats.py  licenses.py  messages.py  music.py  notifications.py  search.py  soundkits.py  spotify.py  squads.py  subscriptions.py  tags.py  (+1 more)
backend/tests/: auth.py  conftest.py  test_auth.py
(+597 files in other folders)
